...
extension UsersViewController: UserListViewModelDelegate {
    
    func fetchUsersFaileur() {
        
        DispatchQueue.main.async { [unowned self] in
            
            let alertController = UIAlertController(title: "Probléme de connexion", message: "Voulez vous continuer par les données local", preferredStyle: .alert)

            let okAction = UIAlertAction(title: "OUI", style: .default) {
                UIAlertAction in

                self.userListViewModel.fetchAllUsersFromDB()
            }
            
            let cancelAction = UIAlertAction(title: "NON", style: .cancel, handler: nil)
...
