...
                                        </constraints>
                                    </view>
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jGu-fG-70A">
                                <rect key="frame" x="223" y="8" width="79" height="30"/>
                                <state key="normal" title="Ses Tâches"/>
                                <connections>
                                    <action selector="showTasks:" destination="gTV-IL-0wX" eventType="touchUpInside" id="cXp-aF-D0D"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
